--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/xobluhd/x513j" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/xobluhd/j11r" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/xobluhd/l12b" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/xobluhd/n8z" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/xobluhd/n4p" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/xobluhd/s12h" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/xobluhd/t3j" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/xobluhd/l10t" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/xobluhd/s9y" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/xobluhd/p7r" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/xobluhd/s5e" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/nivpxqm/y513d" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/s11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/nivpxqm/n12m" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/nivpxqm/p8h" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/nivpxqm/t4g" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/nivpxqm/p12b" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/nivpxqm/i3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/v10t" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/y9r" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/nivpxqm/b7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/nivpxqm/c5d" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242765.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg"><p align="center">被捕香港大纪元员工：遭警威胁送中活摘</p></a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/4/13/n12028379.md#1" title="【思想领袖】布拉特：中共改秩序 扬言打台湾""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-94-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/4/n12232591.md#1" title="【独家】内部文件曝中共脸书账号的秘密""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-04-at-8.52.27-PM-320x200.png">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239794.md#1" title="【重播】蓬佩奥：北京须公布病毒真相""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/download-36-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://qtwlwd303.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242764.md#1">美2/3失业者疫情下所获救济金超过工资</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243086.md#1">蓬佩奥：严防中共窃个资 美不只禁用TikTok</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242999.md#1">【新西兰疫情7.9】隔离点新增3例 施工区域加强管理</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243018.md#1">留学中介：高校正在研究“变更方案”</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243026.md#1">纽约市计划9月复课 到校与网课结合</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243001.md#1">【拍案惊奇】习政敌谋划溃坝？中共猎狐打异己</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242764.md#1">美2/3失业者疫情下所获救济金超过工资</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243086.md#1">蓬佩奥：严防中共窃个资 美不只禁用TikTok</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242999.md#1">【新西兰疫情7.9】隔离点新增3例 施工区域加强管理</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243018.md#1">留学中介：高校正在研究“变更方案”</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243026.md#1">纽约市计划9月复课 到校与网课结合</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239966.md#1">任正非“血腥”管理模式引起FBI局长注意</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,532,011 人
+!共 359,532,541 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -106,7 +106,7 @@
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/4/n12231677.md#1">暴雨持续 长江流域发洪水 近两千万人受灾</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12230343.md#1">【重播】独立日前夕 川普在总统山演讲</a><br>
 <br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242651.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Chris-Smith-and-ZhangJPG-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：帮助营救</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241411.md#1">宁夏永宁县8位法轮功学员面临非法庭审</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242078.md#1">【现场视频】包头市中院剥夺律师参加庭审权利</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242090.md#1">709大抓捕五周年 中共从未停止打压律师</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242062.md#1">蓬佩奥促北京释放许章润：他只是在说实话</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240868.md#1">渝警方以“搞事情”对公民立案 被指口袋罪</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242706.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2017/09/1709070218071758-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242038.md#1">中国飞鹤被揭虚报收支 8个月涉两次造假</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239909.md#1">少林寺上演时装秀 灵隐寺招聘文员写微博</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239663.md#1">中资扎堆入港 大陆20房企上半年赴港IPO</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242549.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-52946697-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241942.md#1">林郑失宠？警务处处长成中共镇压香港要员</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241830.md#1">彭定康：中共在摧毁香港 西方应联手抵制</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241335.md#1">传奇的“自由中国号”台湾亮相 历经百年波折</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240998.md#1">美日澳发联合声明 关注香港南海和朝鲜问题</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242969.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Untitled-7-e1594265581119-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242490.md#1">【一线采访】北京大兴再现确诊病例 官方隐瞒</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241847.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/pjimage-1-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236843.md#1">逾百中国论文在国际期刊发表 疑出自论文工厂</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236065.md#1">江苏惊现杀警案 两名警察被通缉犯刺死</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242955.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/a3-2@1200x1200-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：帮助营救</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241411.md#1">宁夏永宁县8位法轮功学员面临非法庭审</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242078.md#1">【现场视频】包头市中院剥夺律师参加庭审权利</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242090.md#1">709大抓捕五周年 中共从未停止打压律师</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242062.md#1">蓬佩奥促北京释放许章润：他只是在说实话</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242706.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2017/09/1709070218071758-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242038.md#1">中国飞鹤被揭虚报收支 8个月涉两次造假</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239909.md#1">少林寺上演时装秀 灵隐寺招聘文员写微博</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239663.md#1">中资扎堆入港 大陆20房企上半年赴港IPO</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242549.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-52946697-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241942.md#1">林郑失宠？警务处处长成中共镇压香港要员</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241830.md#1">彭定康：中共在摧毁香港 西方应联手抵制</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241335.md#1">传奇的“自由中国号”台湾亮相 历经百年波折</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240998.md#1">美日澳发联合声明 关注香港南海和朝鲜问题</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242969.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Untitled-7-e1594265581119-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242490.md#1">【一线采访】北京大兴再现确诊病例 官方隐瞒</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241847.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/pjimage-1-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236843.md#1">逾百中国论文在国际期刊发表 疑出自论文工厂</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236065.md#1">江苏惊现杀警案 两名警察被通缉犯刺死</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12226681.md#1">监控民众不力 河北两商场遭中共内部通报</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/6/25/n12210635.md#1">【独家】鲁炜发迹和中国“删都”的出现</a><br>
